--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,154 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_transparent">#55000000</color>
-    <color name="app_base_color">#FD4B76</color>
-    <color name="gray_light">#FF666666</color>
-    <color name="gray_light2">#999999</color>
-    <color name="tag_point_color_transparent_gray">#c88a8c94</color>
-    <color name="tag_point_color_transparent_red">#F24976</color>
-    <color name="tag_point_color_transparent_black">#ff353535</color>
-    <color name="text_color_999999">@color/gray_light2</color>
-    <color name="text_color_666666">#666666</color>
-    <color name="text_color_333333">#ff0c0c0c</color>
-    <color name="gray_light3">#d9d9d9</color>
-    <color name="white_transparent">#44ffffff</color>
-    <color name="white_transparent3">#aaffffff</color>
-    <color name="white_transparent2">#ffeaeaea</color>
-    <color name="dark_blue">#2356c4</color>
-    <color name="text_light_pin">#fffd4b76</color>
-    <color name="paster_bg">#ff333333</color>
-    <color name="zt_guide_text_color">#ff989898</color>
-    <color name="zt_baise">#ffffffff</color>
-    <color name="zt_huibaise">#fffdfdfe</color>
-    <color name="zt_zhuce_biankuang">#ff3b3c3e</color>
-    <color name="zt_zhuce_yanzhengma">#fff15372</color>
-    <color name="zt_zhuce_heise">#ff000001</color>
-    <color name="zt_my_zp">#ff555555</color>
-    <color name="zt_main_buttom">#ffeaeaeb</color>
-    <color name="zt_my_beijing">#ffeaeaea</color>
-    <color name="zt_my_txt_colo">#ff7f7f80</color>
-    <color name="zt_my_txt_colo1">#fffd4b74</color>
-    <color name="text_light_pin_no">#ff666666</color>
-    <color name="chaotongdapei">#fffd0001</color>
-    <color name="my_focus_txt">#fffd7897</color>
-    <color name="time_dis">#ffc3c3c3</color>
-    <color name="comment_context_color">#ffe5e5e6</color>
-    <color name="search_top_color">#ffeaeaea</color>
-    <color name="zt_post_item_color">#fff4f4f4</color>
-    <color name="zt_face_biankuang_color">#ffccccca</color>
-    <color name="zt_yes_binding_txt">#ff666666</color>
-    <color name="zt_shezhi_fengexian">#ffe5e5e5</color>
-    <color name="filter_text_color_bg">#ffeaeaea</color>
-    <color name="filter_text_color">#ff969696</color>
-    <color name="sticks_bg">#fff9f9f9</color>
-    <color name="sticks_bg_line">#ffa1a19e</color>
-    <color name="green">#66CD00</color>
-    <color name="sticks_bg_solid" >#d7d7d7d7</color>
-
-
     <color name="transparent">#00000000</color>
-    <color name="black">#ff000000</color>
     <color name="white">#ffffffff</color>
-    <color name="gray">#666666</color>
-    <color name="dialog_title">#ffff0000</color>
-    <color name="common_background">#f5f3f0</color>
     <color name="pink">#ff5d65</color>
-    <color name="brown">#cccccc</color>
-    <color name="pale_pink">#cbc4c6</color>
-    <color name="divider">#e8e3e3</color>
-    <color name="blue">#3299cc</color>
-    <color name="tabcolor">#6e686a</color>
-    <!-- [begin]crop -->
-
-    <color name="crop_bg">#77000000</color>
-
-    <color name="crop__button_bar">#f3f3f3</color>
-    <color name="crop__button_text">#666666</color>
-    <color name="crop__selector_pressed">#1a000000</color>
-    <color name="crop__selector_focused">#77000000</color>
-    <!-- [end]crop -->
-
-
-    <!-- [begin]feed -->
-    <color name="text_photo_action">#ff666666</color>
-    <color name="background_grey">#fff8f8f8</color>
-
-    <color name="text_global_orange">#ffef5e4b</color>
-    <color name="text_global_grey">#ff595959</color>
-    <color name="text_global_grey_light">#ffcccbcb</color>
-    <color name="text_comment_grey">#ff959595</color>
-    <color name="text_global_brown">#ff343434</color>
-    <color name="text_general_photo_name">#ffee574e</color>
-    <color name="progress_light">#fffed3d0</color>
-    <color name="text_general_photo_updatetime">#ff949494</color>
-    <color name="text_global_white_alpha">#a0ffffff</color>
     <color name="red">#ffff0000</color>
-    <!-- [end]feed -->
-
-    <!-- [begin]baby -->
-    <color name="green_baby_heath">#2de092</color>
-    <color name="yellow_baby_unheath">#ffc400</color>
-    <color name="brown_line_title">#aaa2a4</color>
-    <color name="brown_seg_title">#6e686a</color>
-    <color name="brown_seg_content">#3a3738</color>
-    <color name="yellow_title">#ffce00</color>
-    <color name="empty_bg">#3a3738</color>
-    <!-- [end]baby -->
-
-
-    <!-- discovery  -->
-    <color name="discovery_common_bg">#e9e4e2</color>
-
-    <color name="text_ttd_tab_defult_color">#666666</color>
-
-    <color name="holo_blue">#FF33E5B5</color>
-    <color name="background_dialog">#99000000</color>
-
-    <!-- knowledge -->
-    <color name="article_name">#3a3738</color>
-    <color name="article_info">#cbc4c6</color>
-
-    <!-- babyhelper-->
-    <color name="yellow_bg">#ffca00</color>
-    <color name="text_color1">#a48a8b</color>
-
-
-    <color name="fade">#00000000</color>
-
-    <!-- square -->
-    <color name="hot_name">#3a3738</color>
-    <color name="hot_detail">#cbc4c6</color>
-    <color name="tag_color">#aaa2a4</color>
-
-    <color name="txt_color_red">#f94960</color>
-    <color name="txt_color_gray">#6e686a</color>
-    <color name="txt_light_gray">#d0b3b9</color>
-    <color name="txt_light_gray_2">#aaa2a4</color>
-    <color name="txt_hard_gray">#946e6e</color>
-    <color name="txt_color_gray_2">#aaa2a4</color>
-    <color name="txt_color_gray_3">#cbc4c6</color>
-    <color name="txt_color_gray_5">#b4a5a3</color>
-
-    <color name="txt_color_black_1">#413a3a</color>
-    <color name="txt_color_black_2">#443637</color>
-
-    <color name="txt_color_green">#2ce093</color>
-    <color name="txt_color_yellow">#ff6200</color>
-    <color name="txt_color_gray_4">#a7a5a5</color>
-
-    <color name="bg_color_yellow">#fff8dc</color>
-
-    <color name="txt_notice_yaoqing">#9a000000</color>
-
-    <color name="bg_half_black">#79000000</color>
-
-    <color name="txt_white_alp60">#76ffffff</color>
-    <color name="bg_timeline">#cabdb8</color>
-
-    <!-- 透明View -->
-
-    <color name="bg_view">#ffffff</color>
-
     <color name="black_20">#20000000</color>
-
+    <color name="text_color_primary">#212121</color>
+    <color name="text_second_color_primary">#727272</color>
+    <color name="window_background">@android:color/white</color>
 </resources>
